--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs = -Xmx3G
 
 # Source Options
 # Use Modern Java(9+) Syntax (Courtesy of Jabel)
-use_modern_java_syntax = false
+use_modern_java_syntax = true
 
 # Compilation Options
 generate_sources_jar = true
@@ -15,17 +15,17 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 1.0.0
-root_package = com.example
-mod_id = modid
-mod_name = Mod Name
+mod_version = 0.1.0
+root_package = net.oliveratkinson
+mod_id = fair
+mod_name = Fair Play
 
 # Mod Metadata (Optional)
-mod_description =
+mod_description = Ensuring fair play for the server
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors =
+mod_authors = Oliver Atkinson
 mod_credits =
 mod_logo_path =
 
